syntax = "proto3";
package service;

option go_package = "./proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "storage.proto";
import "net_addr.proto";
import "opp_config.proto";

//
// ----------------------------------------------------------------------------
//

service BrokerConsumer {
  rpc GetProviders (Empty) returns (Providers) {}
}

message Empty {}

message OS {
  string os = 1;
  string arch = 2;
}

message ProviderInfo {
  string providerId = 1;
  NetAddr addr = 2;
  OS os = 3;
  uint32 numCPUs = 4;
}

message Providers {
  ProviderInfo items = 1;
}

//
// ----------------------------------------------------------------------------
//

service BrokerProvider {
  rpc Register (ProviderInfo)       returns (Empty) {}
  rpc Status   (stream Utilization) returns (Empty) {}
}

message Utilization {
  string providerId = 1;
  float cpuUsage = 2;
  uint64 memoryTotal = 3;
  uint64 memoryUsed = 4;
  google.protobuf.Timestamp updated = 5;
}

//
// ----------------------------------------------------------------------------
//

service Provider {
  rpc Info         (Empty)         returns (ProviderInfo) {}
  rpc Status       (Empty)         returns (Utilization)  {}

  rpc Init         (Simulation)    returns (Empty)        {}
  rpc CompileSync  (SimulationId)  returns (Binary)       {}
  rpc CompileAsync (SimulationId)  returns (Accepted)     {}
  rpc RunSync      (SimulationRun) returns (StorageRef)   {}
  rpc RunAsync     (SimulationRun) returns (Accepted)     {}
}

message Accepted {
  bool accepted = 1;
}

message SimulationId {
  string id = 1;
}

message Simulation {
  string simulationId = 1;
  OppConfig oppConfig = 2;
  StorageRef source = 3;
}

message SimulationRun {
  string simulationId = 1;
  string config = 2;
  string runNum = 3;
}

message Binary {
  string simulationId = 1;
  OS os = 2;
  StorageRef bin = 3;
}
